# CortexCLI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cortex.db  logs.txt
agents/: coding_agent.hpp  critic_agent.hpp  research_agent.hpp
cli/: main.cpp
core/: agent.hpp  agent_manager.cpp  agent_manager.hpp  base_agent.hpp  debate_manager.cpp  debate_manager.hpp  stats_manager.cpp
include/cortex/agents/: base_agent.hpp  coding_agent.hpp  critic_agent.hpp  orchestrator_agent.hpp  research_agent.hpp
include/cortex/core/: agent.hpp  agent_manager.hpp  debate_manager.hpp  logger.hpp  stats_manager.hpp  workflow_manager.hpp
include/cortex/llm/: llm_client.hpp  ollama_client.hpp  remote_client.hpp
include/cortex/memory/: memory_manager.hpp
include/cortex/messaging/: message.hpp  zeromq_bus.hpp
include/cortex/tools/: file_tools.hpp  shell_tools.hpp
include/cortex/tui/: dashboard.hpp
llm/: llama_client.cpp  llama_client.hpp  ollama_client.cpp  ollama_client.hpp  remote_client.cpp  remote_client.hpp
memory/: memory_manager.cpp  memory_manager.hpp
messaging/: PROTOCOL.md  message.hpp  zeromq_bus.cpp  zeromq_bus.hpp
scripts/: build.sh  install.sh  uninstall.sh
src/: main.cpp
src/core/: agent_manager.cpp  debate_manager.cpp  logger.cpp  stats_manager.cpp  workflow_manager.cpp
src/llm/: ollama_client.cpp  remote_client.cpp
src/memory/: memory_manager.cpp
src/messaging/: zeromq_bus.cpp
src/tui/: dashboard.cpp
tools/: file_tools.hpp  shell_tools.hpp  tool.hpp
tui/: dashboard.cpp  dashboard.hpp
